--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ====================================
-# HUMMY - Environment Variables
+# HUMMII - Environment Variables
 # ====================================
 # Copy this file to .env and fill in the actual values
 # NEVER commit .env files to version control
@@ -9,16 +9,16 @@
 # ====================================
 NODE_ENV=development
 PORT=3000
-APP_NAME=Hummy
+APP_NAME=Hummii
 APP_URL=http://localhost:3000
 
 # ====================================
 # Database - PostgreSQL
 # ====================================
-DATABASE_URL=postgresql://username:password@localhost:5432/hummy_dev
+DATABASE_URL=postgresql://username:password@localhost:5432/hummii_dev
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME=hummy_dev
+DATABASE_NAME=hummii_dev
 DATABASE_USER=username
 DATABASE_PASSWORD=your_secure_password
 DATABASE_SSL=false
@@ -72,8 +72,8 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-smtp-password
-EMAIL_FROM=noreply@hummy.ca
-EMAIL_FROM_NAME=Hummy
+EMAIL_FROM=noreply@hummii.ca
+EMAIL_FROM_NAME=Hummii
 
 # ====================================
 # Push Notifications - OneSignal
@@ -115,14 +115,14 @@ MAPBOX_ACCESS_TOKEN=your-mapbox-access-token
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_REGION=ca-central-1
-AWS_S3_BUCKET=hummy-uploads
-AWS_CLOUDFRONT_URL=https://cdn.hummy.ca
+AWS_S3_BUCKET=hummii-uploads
+AWS_CLOUDFRONT_URL=https://cdn.hummii.ca
 
 # Alternative: Cloudinary
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-cloudinary-api-key
 CLOUDINARY_API_SECRET=your-cloudinary-api-secret
-CLOUDINARY_FOLDER=hummy
+CLOUDINARY_FOLDER=hummii
 
 # ====================================
 # OAuth Providers
@@ -226,10 +226,10 @@ FEATURE_VIDEO_CALLS_ENABLED=false
 # ====================================
 # Legal & Compliance
 # ====================================
-PRIVACY_EMAIL=privacy@hummy.ca
-SUPPORT_EMAIL=support@hummy.ca
-ADMIN_EMAIL=admin@hummy.ca
-COMPANY_NAME=Hummy Inc.
+PRIVACY_EMAIL=privacy@hummii.ca
+SUPPORT_EMAIL=support@hummii.ca
+ADMIN_EMAIL=admin@hummii.ca
+COMPANY_NAME=Hummii Inc.
 COMPANY_ADDRESS=123 Main St, Toronto, ON, Canada
 
 # ====================================
@@ -245,7 +245,7 @@ DEBUG_SQL=false
 # ====================================
 # Docker (for docker-compose)
 # ====================================
-COMPOSE_PROJECT_NAME=hummy
+COMPOSE_PROJECT_NAME=hummii
 POSTGRES_VERSION=15
 REDIS_VERSION=7
 NODE_VERSION=20
