--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
   # ====================================
   postgres:
     image: postgres:${POSTGRES_VERSION:-15}-alpine
-    container_name: hummy-postgres
+    container_name: hummii-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ${DATABASE_NAME:-hummy_dev}
-      POSTGRES_USER: ${DATABASE_USER:-hummy}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-hummy_dev_password}
+      POSTGRES_DB: ${DATABASE_NAME:-hummii_dev}
+      POSTGRES_USER: ${DATABASE_USER:-hummii}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-hummii_dev_password}
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=en_US.UTF-8"
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -19,9 +19,9 @@ services:
     ports:
       - "${DATABASE_PORT:-5432}:5432"
     networks:
-      - hummy-network
+      - hummii-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER:-hummy}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER:-hummii}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -31,7 +31,7 @@ services:
   # ====================================
   redis:
     image: redis:${REDIS_VERSION:-7}-alpine
-    container_name: hummy-redis
+    container_name: hummii-redis
     restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD:-} --appendonly yes
     volumes:
@@ -39,7 +39,7 @@ services:
     ports:
       - "${REDIS_PORT:-6379}:6379"
     networks:
-      - hummy-network
+      - hummii-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -55,12 +55,12 @@ services:
       dockerfile: ../docker/api.Dockerfile
       args:
         NODE_VERSION: ${NODE_VERSION:-20}
-    container_name: hummy-api
+    container_name: hummii-api
     restart: unless-stopped
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       PORT: ${PORT:-3000}
-      DATABASE_URL: postgresql://${DATABASE_USER:-hummy}:${DATABASE_PASSWORD:-hummy_dev_password}@postgres:5432/${DATABASE_NAME:-hummy_dev}
+      DATABASE_URL: postgresql://${DATABASE_USER:-hummii}:${DATABASE_PASSWORD:-hummii_dev_password}@postgres:5432/${DATABASE_NAME:-hummii_dev}
       REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_PASSWORD: ${REDIS_PASSWORD:-}
@@ -77,7 +77,7 @@ services:
       redis:
         condition: service_healthy
     networks:
-      - hummy-network
+      - hummii-network
     command: npm run start:dev
 
   # ====================================
@@ -89,7 +89,7 @@ services:
       dockerfile: ../docker/frontend.Dockerfile
       args:
         NODE_VERSION: ${NODE_VERSION:-20}
-    container_name: hummy-frontend
+    container_name: hummii-frontend
     restart: unless-stopped
     environment:
       NODE_ENV: ${NODE_ENV:-development}
@@ -104,7 +104,7 @@ services:
     depends_on:
       - api
     networks:
-      - hummy-network
+      - hummii-network
     command: npm run dev
 
   # ====================================
@@ -116,7 +116,7 @@ services:
       dockerfile: ../docker/admin.Dockerfile
       args:
         NODE_VERSION: ${NODE_VERSION:-20}
-    container_name: hummy-admin
+    container_name: hummii-admin
     restart: unless-stopped
     environment:
       NODE_ENV: ${NODE_ENV:-development}
@@ -130,7 +130,7 @@ services:
     depends_on:
       - api
     networks:
-      - hummy-network
+      - hummii-network
     command: npm run dev
 
   # ====================================
@@ -138,7 +138,7 @@ services:
   # ====================================
   # elasticsearch:
   #   image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
-  #   container_name: hummy-elasticsearch
+  #   container_name: hummii-elasticsearch
   #   restart: unless-stopped
   #   environment:
   #     - discovery.type=single-node
@@ -149,17 +149,17 @@ services:
   #   ports:
   #     - "9200:9200"
   #   networks:
-  #     - hummy-network
+  #     - hummii-network
 
   # ====================================
   # PgAdmin (Optional - Database GUI)
   # ====================================
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: hummy-pgadmin
+    container_name: hummii-pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@hummy.local}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@hummii.local}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
@@ -170,7 +170,7 @@ services:
     depends_on:
       - postgres
     networks:
-      - hummy-network
+      - hummii-network
     profiles:
       - tools
 
@@ -179,7 +179,7 @@ services:
   # ====================================
   redis-commander:
     image: rediscommander/redis-commander:latest
-    container_name: hummy-redis-commander
+    container_name: hummii-redis-commander
     restart: unless-stopped
     environment:
       REDIS_HOSTS: local:redis:6379:0:${REDIS_PASSWORD:-}
@@ -188,7 +188,7 @@ services:
     depends_on:
       - redis
     networks:
-      - hummy-network
+      - hummii-network
     profiles:
       - tools
 
@@ -209,6 +209,6 @@ volumes:
 # Networks
 # ====================================
 networks:
-  hummy-network:
+  hummii-network:
     driver: bridge
 
