--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -71,7 +71,7 @@ http {
     # HTTP to HTTPS redirect
     server {
         listen 80;
-        server_name hummy.ca www.hummy.ca api.hummy.ca admin.hummy.ca;
+        server_name hummii.ca www.hummii.ca api.hummii.ca admin.hummii.ca;
         
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -85,7 +85,7 @@ http {
     # Main Frontend (HTTPS)
     server {
         listen 443 ssl http2;
-        server_name hummy.ca www.hummy.ca;
+        server_name hummii.ca www.hummii.ca;
 
         # SSL certificates (replace with Let's Encrypt paths)
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
@@ -97,7 +97,7 @@ http {
         ssl_session_timeout 10m;
 
         # Security headers
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.hummy.ca wss://api.hummy.ca; frame-ancestors 'none';" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.hummii.ca wss://api.hummii.ca; frame-ancestors 'none';" always;
 
         location / {
             limit_req zone=general_limit burst=20 nodelay;
@@ -117,7 +117,7 @@ http {
     # API Backend (HTTPS)
     server {
         listen 443 ssl http2;
-        server_name api.hummy.ca;
+        server_name api.hummii.ca;
 
         # SSL certificates
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
@@ -169,7 +169,7 @@ http {
     # Admin Panel (HTTPS)
     server {
         listen 443 ssl http2;
-        server_name admin.hummy.ca;
+        server_name admin.hummii.ca;
 
         # SSL certificates
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
