--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -141,7 +141,7 @@ updates:
       interval: "weekly"
       day: "wednesday"
       time: "09:00"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 1
     reviewers:
       - "DanielFilinski"
     labels:
@@ -150,6 +150,14 @@ updates:
       - "ci-cd"
     commit-message:
       prefix: "chore(ci)"
+    groups:
+      github-actions:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+          - "major"
 
 # ====================================
 # Dependabot Configuration Notes
