--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     image: redis:${REDIS_VERSION:-7}-alpine
     container_name: hummii-redis
     restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD:-} --appendonly yes
+    command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
     ports:
