--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,20 @@
   "dependencies": {
     "next": "^16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@tanstack/react-query": "^5.59.0",
+    "zustand": "^4.5.5",
+    "react-hook-form": "^7.53.0",
+    "zod": "^3.23.8",
+    "@hookform/resolvers": "^3.9.0",
+    "socket.io-client": "^4.7.5",
+    "next-intl": "^3.19.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.59.0",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
