--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   # ====================================
   # PostgreSQL Database
@@ -86,7 +84,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: ./Dockerfile
+      dockerfile: ../docker/frontend.Dockerfile
       target: development
       args:
         NODE_VERSION: ${NODE_VERSION:-20}
