--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,10 @@ services:
     build:
       context: ./api
       dockerfile: ../docker/api.Dockerfile
+      target: development
       args:
         NODE_VERSION: ${NODE_VERSION:-20}
+    platform: linux/amd64
     container_name: hummii-api
     restart: unless-stopped
     environment:
