--- a/api/package.json
+++ b/api/package.json
@@ -26,34 +26,34 @@
     "migration:run": "prisma migrate deploy"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
-    "@prisma/client": "^5.7.1",
+    "@nestjs/websockets": "^10.3.0",
+    "@prisma/client": "^6.18.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "nest-winston": "^1.9.4",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "ioredis": "^5.3.2",
-    "@nestjs/bullmq": "^10.0.1",
-    "bullmq": "^5.0.0",
-    "@nestjs/websockets": "^10.3.0",
-    "@nestjs/platform-socket.io": "^10.3.0",
     "socket.io": "^4.6.1",
     "stripe": "^14.10.0",
-    "winston": "^3.11.0",
-    "nest-winston": "^1.9.4"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
@@ -63,9 +63,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
-    "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
@@ -74,7 +74,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1",
+    "prisma": "^6.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
