--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles",
+    "test:e2e:watch": "jest --config ./test/jest-e2e.json --watch --runInBand",
+    "test:unit": "jest --testPathIgnorePatterns=e2e-spec.ts",
+    "test:all": "npm run test:unit && npm run test:e2e",
+    "test:docker": "docker compose -f ../docker-compose.test.yml up --build --abort-on-container-exit",
+    "test:docker:down": "docker compose -f ../docker-compose.test.yml down -v",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
