feat(deployment): enhance production environment setup and security compliance
- Created comprehensive `docker-compose.prod.yml` for production deployment with SSL support for PostgreSQL and Redis password authentication
- Introduced `DatabaseConfig` and `RedisConfig` classes for managing database and Redis connections with enhanced security features
- Expanded environment variable validation to enforce security standards, including JWT secrets, Redis password, and URL formats
- Developed a detailed production environment variables setup guide to ensure secure deployment practices
- Implemented health checks and logging configurations for all services to improve monitoring and reliability
- Ensured compliance with PIPEDA through rigorous validation and security measures

--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "migration:run": "prisma migrate deploy"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
