--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,41 +1,79 @@
+# Production Docker Compose Configuration for Hummii
+# PIPEDA Compliant: SSL for PostgreSQL, Password-protected Redis, HTTPS only
+#
+# Usage:
+#   docker compose -f docker-compose.prod.yml up -d
+#
+# Prerequisites:
+#   1. SSL certificates in /etc/ssl/certs/ and /etc/ssl/private/
+#   2. Environment variables configured in .env.production
+#   3. Secrets generated (JWT, Redis password, database password)
+
 services:
   # ====================================
-  # PostgreSQL Database (Production)
+  # PostgreSQL Database with SSL
   # ====================================
   postgres:
     image: postgres:15-alpine
     container_name: hummii-postgres-prod
     restart: always
     environment:
-      POSTGRES_DB: ${DATABASE_NAME:-hummii_prod}
+      POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=en_US.UTF-8"
     volumes:
-      - postgres_prod_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      # SSL certificates for PostgreSQL
+      - ${SSL_CERT_PATH}/postgres-server.crt:/var/lib/postgresql/server.crt:ro
+      - ${SSL_KEY_PATH}/postgres-server.key:/var/lib/postgresql/server.key:ro
+      # Read-only init script
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    # Enable SSL for PostgreSQL
+    command: >
+      postgres
+      -c ssl=on
+      -c ssl_cert_file=/var/lib/postgresql/server.crt
+      -c ssl_key_file=/var/lib/postgresql/server.key
+      -c ssl_min_protocol_version=TLSv1.2
+      -c max_connections=100
+      -c shared_buffers=256MB
+      -c effective_cache_size=1GB
+      -c maintenance_work_mem=64MB
+      -c checkpoint_completion_target=0.9
+      -c wal_buffers=16MB
+      -c default_statistics_target=100
+      -c random_page_cost=1.1
+      -c effective_io_concurrency=200
+      -c work_mem=2621kB
+      -c min_wal_size=1GB
+      -c max_wal_size=4GB
+    # Do NOT expose PostgreSQL to host in production
+    # Only accessible within docker network
+    expose:
+      - "5432"
     networks:
-      - hummii-prod-network
+      - hummii-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: 2G
-        reservations:
-          cpus: '1'
-          memory: 1G
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ====================================
-  # Redis Cache (Production)
+  # Redis with Password Authentication
   # ====================================
   redis:
     image: redis:7-alpine
     container_name: hummii-redis-prod
     restart: always
+    # Redis with password + TLS (if needed)
     command: >
       redis-server
       --requirepass ${REDIS_PASSWORD}
@@ -43,23 +81,34 @@ services:
       --appendfsync everysec
       --maxmemory 512mb
       --maxmemory-policy allkeys-lru
+      --tcp-backlog 511
+      --timeout 300
+      --tcp-keepalive 60
+      --loglevel notice
     volumes:
-      - redis_prod_data:/data
+      - redis_data:/data
+      # Optional: TLS for Redis (if using Redis Enterprise or AWS ElastiCache)
+      # - ${SSL_CERT_PATH}/redis.crt:/etc/ssl/certs/redis.crt:ro
+      # - ${SSL_KEY_PATH}/redis.key:/etc/ssl/private/redis.key:ro
+    # Do NOT expose Redis to host in production
+    expose:
+      - "6379"
     networks:
-      - hummii-prod-network
+      - hummii-network
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 512M
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ====================================
-  # Backend API (Production)
+  # Backend API (NestJS) - Production
   # ====================================
   api:
     build:
@@ -67,51 +116,71 @@ services:
       dockerfile: ../docker/api.Dockerfile
       target: production
       args:
-        NODE_VERSION: 20
-    image: ${DOCKER_USERNAME}/hummii-api:${TAG:-latest}
+        NODE_VERSION: ${NODE_VERSION:-20}
+    container_name: hummii-api-prod
     restart: always
     environment:
       NODE_ENV: production
       PORT: 3000
-      DATABASE_URL: postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5432/${DATABASE_NAME}
+      # Database with SSL
+      DATABASE_URL: ${DATABASE_URL}
+      # Redis with password
       REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_PASSWORD: ${REDIS_PASSWORD}
+      # JWT Secrets (MUST be 256-bit minimum)
       JWT_ACCESS_SECRET: ${JWT_ACCESS_SECRET}
       JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
-      SENTRY_DSN: ${SENTRY_DSN}
+      JWT_ACCESS_EXPIRATION: ${JWT_ACCESS_EXPIRATION:-15m}
+      JWT_REFRESH_EXPIRATION: ${JWT_REFRESH_EXPIRATION:-7d}
+      # URLs (HTTPS only)
+      FRONTEND_URL: ${FRONTEND_URL}
+      API_URL: ${API_URL}
+      # Stripe (production keys)
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      # AWS S3 (for file uploads)
+      AWS_S3_BUCKET: ${AWS_S3_BUCKET}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION:-ca-central-1}
+      # Email provider
+      EMAIL_PROVIDER: ${EMAIL_PROVIDER:-sendgrid}
+      SENDGRID_API_KEY: ${SENDGRID_API_KEY}
+      # Google OAuth
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL}
     volumes:
-      - ./logs/api:/app/logs:rw
-      - ./uploads:/app/uploads:rw
+      # SSL certificates for database connection
+      - ${SSL_CERT_PATH}/postgres-client.crt:/etc/ssl/certs/postgres-client.crt:ro
+      - ${SSL_KEY_PATH}/postgres-client.key:/etc/ssl/private/postgres-client.key:ro
+      # Logs
+      - ./logs/api:/app/logs
+    # Do NOT expose API directly - Nginx will proxy
+    expose:
+      - "3000"
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
     networks:
-      - hummii-prod-network
-    deploy:
-      replicas: 2
-      resources:
-        limits:
-          cpus: '2'
-          memory: 2G
-        reservations:
-          cpus: '0.5'
-          memory: 512M
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
+      - hummii-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "5"
 
   # ====================================
-  # Frontend (Production)
+  # Frontend (Next.js) - Production
   # ====================================
   frontend:
     build:
@@ -119,37 +188,37 @@ services:
       dockerfile: ../docker/frontend.Dockerfile
       target: production
       args:
-        NODE_VERSION: 20
-    image: ${DOCKER_USERNAME}/hummii-frontend:${TAG:-latest}
+        NODE_VERSION: ${NODE_VERSION:-20}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    container_name: hummii-frontend-prod
     restart: always
     environment:
       NODE_ENV: production
+      PORT: 3000
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      NEXT_PUBLIC_GA_MEASUREMENT_ID: ${NEXT_PUBLIC_GA_MEASUREMENT_ID}
-      NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY}
-      SENTRY_DSN: ${SENTRY_DSN}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
+      NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: ${NEXT_PUBLIC_GOOGLE_ANALYTICS_ID}
+    # Do NOT expose frontend directly - Nginx will proxy
+    expose:
+      - "3000"
     depends_on:
       - api
     networks:
-      - hummii-prod-network
-    deploy:
-      replicas: 2
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
+      - hummii-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ====================================
-  # Admin Panel (Production)
+  # Admin Panel - Production
   # ====================================
   admin:
     build:
@@ -157,82 +226,85 @@ services:
       dockerfile: ../docker/admin.Dockerfile
       target: production
       args:
-        NODE_VERSION: 20
-    image: ${DOCKER_USERNAME}/hummii-admin:${TAG:-latest}
+        NODE_VERSION: ${NODE_VERSION:-20}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    container_name: hummii-admin-prod
     restart: always
     environment:
       NODE_ENV: production
+      PORT: 3000
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      SENTRY_DSN: ${SENTRY_DSN}
+    # Do NOT expose admin directly - Nginx will proxy
+    expose:
+      - "3000"
     depends_on:
       - api
     networks:
-      - hummii-prod-network
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
+      - hummii-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ====================================
-  # NGINX Reverse Proxy (Production)
+  # Nginx Reverse Proxy with SSL/TLS
   # ====================================
   nginx:
     image: nginx:alpine
     container_name: hummii-nginx-prod
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
-      - ./logs/nginx:/var/log/nginx:rw
+      - ./docker/nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx/conf.d:/etc/nginx/conf.d:ro
+      # SSL certificates (Let's Encrypt or custom)
+      - ${SSL_CERT_PATH}:/etc/nginx/ssl/certs:ro
+      - ${SSL_KEY_PATH}:/etc/nginx/ssl/private:ro
+      # Static files
+      - ./frontend/public:/var/www/frontend/public:ro
+      # Logs
+      - ./logs/nginx:/var/log/nginx
+    ports:
+      - "80:80"   # HTTP (redirects to HTTPS)
+      - "443:443" # HTTPS
     depends_on:
       - api
       - frontend
       - admin
     networks:
-      - hummii-prod-network
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 256M
+      - hummii-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "5"
 
 # ====================================
 # Volumes (Production)
 # ====================================
 volumes:
-  postgres_prod_data:
+  postgres_data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /data/postgres
-  redis_prod_data:
+  redis_data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /data/redis
 
 # ====================================
-# Networks (Production)
+# Networks
 # ====================================
 networks:
-  hummii-prod-network:
+  hummii-network:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.28.0.0/16
-
+        - subnet: 172.20.0.0/16
