--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^6.18.0",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.0.0",
     "class-transformer": "^0.5.1",
@@ -58,6 +59,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.4",
     "socket.io": "^4.6.1",
     "stripe": "^14.10.0",
     "winston": "^3.11.0"
