--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -19,6 +19,9 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
+    # Hide server version (security by obscurity)
+    server_tokens off;
+
     # Performance optimizations
     sendfile on;
     tcp_nopush on;
@@ -37,17 +40,21 @@ http {
                application/rss+xml font/truetype font/opentype 
                application/vnd.ms-fontobject image/svg+xml;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
+    # Security headers (global - applied to all server blocks)
+    add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=(self), payment=(self)" always;
 
     # Rate limiting zones
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=5r/m;
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=50r/s;
+
+    # Connection limiting zone (DDoS protection)
+    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
 
     # Upstream backends
     upstream api_backend {
@@ -90,17 +97,22 @@ http {
         # SSL certificates (replace with Let's Encrypt paths)
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        
+        # SSL/TLS Configuration (modern security - TLS 1.2 + 1.3)
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off; # Important for TLS 1.3
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
+        ssl_session_tickets off; # Disable session tickets for better security
 
         # Security headers
         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.hummii.ca wss://api.hummii.ca; frame-ancestors 'none';" always;
 
         location / {
             limit_req zone=general_limit burst=20 nodelay;
+            limit_conn conn_limit_per_ip 20; # Max 20 concurrent connections per IP
+            
             proxy_pass http://frontend_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -122,13 +134,20 @@ http {
         # SSL certificates
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        
+        # SSL/TLS Configuration (modern security - TLS 1.2 + 1.3)
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off; # Important for TLS 1.3
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
 
         # API rate limiting
         location /auth {
             limit_req zone=auth_limit burst=5 nodelay;
+            limit_conn conn_limit_per_ip 5; # Stricter connection limit for auth endpoints
+            
             proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -138,6 +157,8 @@ http {
         }
 
         location /socket.io {
+            limit_conn conn_limit_per_ip 10; # WebSocket connection limit
+            
             proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -151,6 +172,8 @@ http {
 
         location / {
             limit_req zone=api_limit burst=20 nodelay;
+            limit_conn conn_limit_per_ip 20; # Max 20 concurrent connections per IP
+            
             proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -174,9 +197,14 @@ http {
         # SSL certificates
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        
+        # SSL/TLS Configuration (modern security - TLS 1.2 + 1.3)
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off; # Important for TLS 1.3
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
 
         # Restrict access to admin (optional: add IP whitelist)
         # allow 1.2.3.4; # Your office IP
@@ -184,6 +212,8 @@ http {
 
         location / {
             limit_req zone=general_limit burst=10 nodelay;
+            limit_conn conn_limit_per_ip 10; # Stricter connection limit for admin panel
+            
             proxy_pass http://admin_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
