feat(upload): integrate Cloudflare R2 and Images services for file management
- Added Cloudflare R2 service for S3-compatible object storage, enabling secure upload and management of private documents.
- Implemented Cloudflare Images service for optimized public image uploads, including automatic transformations and CDN delivery.
- Unified upload functionality through a new UploadService, facilitating seamless handling of both public and private files.
- Updated User model to include avatarId and avatarUrl for better user profile management.
- Introduced new endpoints for uploading and deleting user avatars, ensuring old avatars are removed upon new uploads.
- Enhanced documentation to reflect new upload architecture and usage instructions.

Impact:
- Streamlined file upload processes, improving user experience and reducing storage costs with Cloudflare integration.

--- a/api/.env.example
+++ b/api/.env.example
@@ -112,3 +112,19 @@ SESSION_MAX_AGE=86400000
 ENABLE_SWAGGER=true
 ENABLE_GRAPHQL=false
 ENABLE_PARTNER_PORTAL=false
+
+
+# ============================================================================
+# CLOUDFLARE R2 (S3-Compatible Object Storage)
+# ============================================================================
+R2_ACCOUNT_ID=your_cloudflare_account_id
+R2_ACCESS_KEY_ID=your_r2_access_key_id
+R2_SECRET_ACCESS_KEY=your_r2_secret_access_key
+R2_BUCKET_NAME=hummii-documents
+
+# ============================================================================
+# CLOUDFLARE IMAGES (Native Image Optimization API)
+# ============================================================================
+CF_ACCOUNT_ID=your_cloudflare_account_id
+CF_ACCOUNT_HASH=your_cloudflare_account_hash
+CF_IMAGES_TOKEN=your_cloudflare_images_api_token
