--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "migration:run": "prisma migrate deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.922.0",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.3.0",
@@ -44,12 +45,12 @@
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^6.18.0",
-    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.7",
+    "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "nest-winston": "^1.9.4",
@@ -73,6 +74,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.6",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
