feat(email): integrate SendGrid for email handling with webhook support
- Implemented SendGrid integration for sending emails, allowing for asynchronous processing via a BullMQ queue.
- Added a new EmailWebhookController to handle incoming webhook events from SendGrid, processing events such as delivered, bounce, and open.
- Enhanced EmailService to support both console logging in development and SendGrid in production, with appropriate configurations in the .env file.
- Created a QueueModule for managing email jobs, including retry logic and concurrency control.
- Updated tests to cover new email processing features and ensure proper functionality.

Impact:
- Improved email delivery management and tracking, enhancing user experience and compliance with email handling standards.

--- a/api/.env.example
+++ b/api/.env.example
@@ -57,8 +57,18 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # ============================================================================
-# EMAIL SERVICE (OneSignal)
+# EMAIL SERVICE
 # ============================================================================
+# Email Provider: console (dev), sendgrid (production)
+EMAIL_PROVIDER=console
+EMAIL_FROM=noreply@hummii.ca
+APP_NAME=Hummii
+
+# SendGrid (Production/Staging)
+SENDGRID_API_KEY=SG.your_api_key_here
+SENDGRID_WEBHOOK_SECRET=your_webhook_verification_key
+
+# OneSignal (Push Notifications - Optional)
 ONESIGNAL_APP_ID=your-onesignal-app-id
 ONESIGNAL_API_KEY=your-onesignal-api-key
 ONESIGNAL_REST_API_KEY=your-onesignal-rest-api-key
