--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
     "@nestjs-modules/ioredis": "^2.0.2",
-    "@nestjs/bullmq": "^10.0.1",
+    "@nestjs/bullmq": "^10.2.3",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -45,8 +45,9 @@
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^6.18.0",
+    "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.2",
-    "bullmq": "^5.0.0",
+    "bullmq": "^5.63.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.7",
