--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
     "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/bull": "^11.0.4",
     "@nestjs/bullmq": "^10.2.3",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -46,7 +47,9 @@
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^6.18.0",
     "@sendgrid/mail": "^8.1.6",
+    "@types/bull": "^3.15.9",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "bullmq": "^5.63.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
