--- a/api/package.json
+++ b/api/package.json
@@ -41,13 +41,15 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
-    "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
-    "@nestjs/websockets": "^10.3.0",
+    "@nestjs/websockets": "^10.4.20",
     "@prisma/client": "^6.18.0",
     "@sendgrid/mail": "^8.1.6",
     "@types/bull": "^3.15.9",
+    "@types/pdfkit": "^0.17.3",
+    "bad-words": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "bull": "^4.16.5",
     "bullmq": "^5.63.0",
@@ -62,10 +64,12 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
+    "rate-limiter-flexible": "^8.1.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.4",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.8.1",
     "stripe": "^14.10.0",
     "winston": "^3.11.0"
   },
@@ -79,7 +83,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/multer": "^2.0.0",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.19.24",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
