feat(logging, monitoring): add comprehensive logging and monitoring stacks for production
- Introduced a logging stack using ELK (Elasticsearch, Logstash, Kibana) for centralized log management and analysis.
- Implemented a monitoring stack with Prometheus, Grafana, and Alertmanager for real-time metrics collection and alerting.
- Configured health checks for services to ensure system reliability and performance monitoring.
- Added Docker Compose files for both logging and monitoring setups, facilitating easy deployment and management.

Impact:
- Enhanced observability of the application through structured logging and metrics, enabling proactive issue detection and resolution.
- Improved system reliability and maintainability by integrating monitoring and alerting capabilities, ensuring timely responses to performance issues.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -254,6 +254,24 @@ services:
         max-file: "3"
 
   # ====================================
+  # Certbot - SSL Certificate Management
+  # ====================================
+  certbot:
+    image: certbot/certbot:latest
+    container_name: hummii-certbot
+    restart: "no"
+    volumes:
+      - ./docker/nginx/ssl:/etc/letsencrypt:rw
+      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
+      - ./logs/certbot:/var/log/letsencrypt
+    command: certonly --standalone --agree-tos --email ${CERTBOT_EMAIL:-admin@hummii.ca} --non-interactive
+    networks:
+      - hummii-network
+    profiles:
+      - certbot
+    # Only run when manually invoked or via cron job
+
+  # ====================================
   # Nginx Reverse Proxy with SSL/TLS
   # ====================================
   nginx:
