--- a/api/package.json
+++ b/api/package.json
@@ -66,6 +66,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
+    "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^8.1.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
