feat(tests): add scenario testing framework and multiple test scenarios
- Introduced a new GitHub Actions workflow for running scenario tests, enhancing CI/CD integration.
- Created a comprehensive set of scenario tests covering user journeys, email verification, order lifecycle, and health checks.
- Implemented a detailed reporting mechanism for test results, including HTML and JUnit formats.
- Added scripts for running tests and generating reports, improving developer experience and test management.
- Updated package.json with new test commands for easier execution of specific scenarios.

Impact:
- Enhanced testing capabilities for the Hummii API, ensuring robust coverage of critical user flows and improving overall code quality.

--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,16 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles",
     "test:e2e:watch": "jest --config ./test/jest-e2e.json --watch --runInBand",
+    "test:e2e:categories": "jest --config ./test/jest-e2e.json --testPathPattern=categories.e2e-spec.ts --runInBand",
+    "test:e2e:contractors": "jest --config ./test/jest-e2e.json --testPathPattern=contractors.e2e-spec.ts --runInBand",
+    "test:e2e:proposals": "jest --config ./test/jest-e2e.json --testPathPattern=proposals.e2e-spec.ts --runInBand",
+    "test:scenarios": "jest --config ./test/scenarios/jest-scenarios.json --runInBand --detectOpenHandles",
+    "test:scenarios:watch": "jest --config ./test/scenarios/jest-scenarios.json --watch --runInBand",
+    "test:scenarios:health": "jest --config ./test/scenarios/jest-scenarios.json --testPathPattern=health-check --runInBand",
+    "test:scenarios:verification": "jest --config ./test/scenarios/jest-scenarios.json --testPathPattern=email-verification --runInBand",
+    "test:scenarios:user": "jest --config ./test/scenarios/jest-scenarios.json --testPathPattern=user-journey --runInBand",
+    "test:scenarios:order": "jest --config ./test/scenarios/jest-scenarios.json --testPathPattern=order-lifecycle --runInBand",
+    "test:scenarios:report": "npm run test:scenarios && open test-reports/scenarios/scenario-tests-report.html",
     "test:unit": "jest --testPathIgnorePatterns=e2e-spec.ts",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:docker": "docker compose -f ../docker-compose.test.yml up --build --abort-on-container-exit",
@@ -95,11 +105,13 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.1.1",
     "prisma": "^6.18.0",
     "source-map-support": "^0.5.21",
