feat(ui): enhance Avatar component with new properties and update styles feat(landing): refactor LandingPage with new Card components and improved layout chore(ui): remove deprecated Input component and update Button export chore(tsconfig): add path aliases for better module resolution chore(tests): update test results with observed errors

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,30 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@assets/*": [
+        "./assets/*"
+      ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@ui/*": [
+        "./components/ui/*"
+      ],
+      "@pages/*": [
+        "./components/pages/*"
+      ],
+      "@app/*": [
+        "./app/*"
+      ],
+      "@hooks/*": [
+        "./hooks/*"
+      ],
+      "@lib/*": [
+        "./lib/*"
+      ],
+      "@types/*": [
+        "./types/*"
       ]
     },
     "forceConsistentCasingInFileNames": true
