feat: Add design system showcase page and installation script
- Created index.html for the design system overview and file downloads.
- Implemented index.ts to export UI components and their types.
- Added info.md detailing project status and future improvements.
- Introduced install.sh script for easy installation of design system files into Next.js projects.
- Developed layout.tsx for consistent layout structure across pages.
- Created page.tsx to showcase all design tokens and components visually.
- Updated Typography component to use correct import paths.
- Added utility function for merging Tailwind CSS classes.
- Adjusted tailwind.config.ts and tsconfig.json for correct paths and configurations.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -42,7 +42,7 @@
         "./app/*"
       ],
       "@hooks/*": [
-        "./hooks/*"
+        ".src/lib/hooks/*"
       ],
       "@lib/*": [
         "./lib/*"
