feat: add design system showcase page and internationalization support
- Implemented a new Design System Showcase page with various UI components including buttons, inputs, cards, and more.
- Added internationalization support with English and Russian translations.
- Configured Next.js to use the new i18n setup with middleware for locale handling.
- Updated Tailwind CSS configuration to include new paths for styles.
- Enhanced TypeScript configuration for better module resolution.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -40,15 +40,27 @@
       ],
       "@app/*": [
         "./app/*"
-      ],
-      "@hooks/*": [
-        ".src/lib/hooks/*"
-      ],
+      ],      
       "@lib/*": [
-        "./lib/*"
+        "./src/shared/lib/*"
       ],
       "@types/*": [
         "./types/*"
+      ],
+      "@shared/*": [
+        "./src/shared/*"
+      ],
+      "@entities/*": [
+        "./src/entities/*"
+      ],
+      "@features/*": [
+        "./src/features/*"
+      ],
+      "@widgets/*": [
+        "./src/widgets/*"
+      ],
+      "@screens/*": [
+        "./src/screens/*"
       ]
     },
     "forceConsistentCasingInFileNames": true
